dynamix/force-app/main/default/objects/Opportunity/fields/Payment_Received_from_Customer__c.field-meta.xml
<CustomField>
    <fullName>Payment_Received_from_Customer__c</fullName>
    <label>Payment Received from Customer?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>