dynamix/force-app/main/default/objects/Opportunity/fields/Possession_In__c.field-meta.xml
<CustomField>
    <fullName>Possession_In__c</fullName>
    <label>Possession In</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready to Move In</fullName>
            </value>
            <value>
                <fullName>Less than 1 Year</fullName>
            </value>
            <value>
                <fullName>1-2 Years</fullName>
            </value>
            <value>
                <fullName>2-3 years</fullName>
            </value>
            <value>
                <fullName>3-4 years</fullName>
            </value>
            <value>
                <fullName>Any</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>