dynamix/force-app/main/default/objects/Opportunity/fields/Preferred_Floor__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Floor__c</fullName>
    <label>Preferred Floor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>