dynamix/force-app/main/default/objects/Opportunity/fields/Preferred_Possession_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Possession_Timeline__c</fullName>
    <label>Preferred Possession Timeline</label>
    <type>Date</type>
</CustomField>