dynamix/force-app/main/default/objects/Opportunity/fields/Preferred_Size_of_Unit_in_sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Size_of_Unit_in_sq_ft__c</fullName>
    <label>Preferred Size of Unit(in sq. ft.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>