dynamix/force-app/main/default/objects/Opportunity/fields/Preferred_View__c.field-meta.xml
<CustomField>
    <fullName>Preferred_View__c</fullName>
    <label>Preferred View</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hill</fullName>
            </value>
            <value>
                <fullName>City</fullName>
            </value>
            <value>
                <fullName>Lake</fullName>
            </value>
            <value>
                <fullName>Garden</fullName>
            </value>
            <value>
                <fullName>River</fullName>
            </value>
            <value>
                <fullName>Amenity</fullName>
            </value>
            <value>
                <fullName>Building</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>