dynamix/force-app/main/default/objects/Opportunity/fields/Project_No_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Project_No_of_Days__c</fullName>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>180 Days</fullName>
                <default>true</default>
                <label>180 Days</label>
            </value>
            <value>
                <fullName>30 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>