dynamix/force-app/main/default/objects/Opportunity/fields/Project_Recommended_By_Agent__c.field-meta.xml
<CustomField>
    <fullName>Project_Recommended_By_Agent__c</fullName>
    <label>Project Recommended By Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>