dynamix/force-app/main/default/objects/Opportunity/fields/Projects_Already_Visited__c.field-meta.xml
<CustomField>
    <fullName>Projects_Already_Visited__c</fullName>
    <label>Projects Already Visited</label>
    <length>255</length>
    <type>Text</type>
</CustomField>