dynamix/force-app/main/default/objects/Opportunity/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Opportunity Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating</valueSetName>
    </valueSet>
</CustomField>