dynamix/force-app/main/default/objects/Opportunity/fields/Reason_For_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Approval_Status__c</fullName>
    <label>Reason For Approval Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>