dynamix/force-app/main/default/objects/Opportunity/fields/Reason_for_lost__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_lost__c</fullName>
    <label>Reason for lost</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget Mismatch</fullName>
            </value>
            <value>
                <fullName>Possession Timeline Mismatch</fullName>
            </value>
            <value>
                <fullName>Wrong Locality</fullName>
            </value>
            <value>
                <fullName>Configuration Mismatch</fullName>
            </value>
            <value>
                <fullName>Not liked the project</fullName>
            </value>
            <value>
                <fullName>Finds other project better</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Developer Issue</fullName>
            </value>
            <value>
                <fullName>Apartment Size</fullName>
            </value>
            <value>
                <fullName>Interested in Resale / Renting property</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Layout</fullName>
            </value>
            <value>
                <fullName>Interested In Another Project</fullName>
            </value>
            <value>
                <fullName>Possession Timeline</fullName>
            </value>
            <value>
                <fullName>Amenities</fullName>
            </value>
            <value>
                <fullName>Home Loan Issue</fullName>
            </value>
            <value>
                <fullName>Low Budget</fullName>
            </value>
            <value>
                <fullName>Own contribution Issue</fullName>
            </value>
            <value>
                <fullName>Not interested in Property</fullName>
            </value>
            <value>
                <fullName>Will Purchase Later</fullName>
            </value>
            <value>
                <fullName>Plan Dropped / Postponed</fullName>
            </value>
            <value>
                <fullName>Booked elsewhere</fullName>
            </value>
            <value>
                <fullName>Future Prospect</fullName>
            </value>
            <value>
                <fullName>Not Contactable / Not Answering</fullName>
            </value>
            <value>
                <fullName>Not Interested after multiple follow-ups</fullName>
            </value>
            <value>
                <fullName>Vastu Issue</fullName>
            </value>
            <value>
                <fullName>Finance Issue</fullName>
            </value>
            <value>
                <fullName>Auto cancelled due to business reason</fullName>
            </value>
            <value>
                <fullName>Corona Job Loss</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>