dynamix/force-app/main/default/objects/Opportunity/fields/Reason_For_Preferring_Current_Residence__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Preferring_Current_Residence__c</fullName>
    <label>Reason For Preferring Current Residence</label>
    <type>TextArea</type>
</CustomField>