dynamix/force-app/main/default/objects/Opportunity/fields/Reason_for_Source_Change__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Source_Change__c</fullName>
    <label>Reason for Source Change</label>
    <length>255</length>
    <type>Text</type>
</CustomField>