dynamix/force-app/main/default/objects/Opportunity/fields/Referral_By_Customer__c.field-meta.xml
<CustomField>
    <fullName>Referral_By_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral By Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Referral By Customer)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>