dynamix/force-app/main/default/objects/Opportunity/fields/Referral_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Referral_Mobile_Number__c</fullName>
    <label>Referral Mobile Number</label>
    <type>Phone</type>
</CustomField>