dynamix/force-app/main/default/objects/Opportunity/fields/Residential_Level__c.field-meta.xml
<CustomField>
    <fullName>Residential_Level__c</fullName>
    <label>Residential Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>Il</fullName>
            </value>
            <value>
                <fullName>lll</fullName>
            </value>
            <value>
                <fullName>lV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>