dynamix/force-app/main/default/objects/Opportunity/fields/Revisit_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Revisit_Datetime__c</fullName>
    <label>Revisit Datetime</label>
    <type>DateTime</type>
</CustomField>