dynamix/force-app/main/default/objects/Opportunity/fields/Secondary_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>