dynamix/force-app/main/default/objects/Opportunity/fields/Source_of_Funding__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Funding__c</fullName>
    <label>Source of Funding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Source_of_Funding</valueSetName>
    </valueSet>
</CustomField>