dynamix/force-app/main/default/objects/Opportunity/fields/Spouse_Work_Location__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Work_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spouse Work Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>