dynamix/force-app/main/default/objects/Opportunity/fields/Stamp_Duty_Payable_By__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty_Payable_By__c</fullName>
    <label>Stamp Duty Payable By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dynamix</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>