dynamix/force-app/main/default/objects/Opportunity/fields/Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Sub_Source__c</fullName>
    <label>Enquiry Source 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>