dynamix/force-app/main/default/objects/Opportunity/fields/Sub_Source_Specification__c.field-meta.xml
<CustomField>
    <fullName>Sub_Source_Specification__c</fullName>
    <label>Sub Source Specification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>