dynamix/force-app/main/default/objects/Opportunity/fields/Task_Target__c.field-meta.xml
<CustomField>
    <fullName>Task_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Target</label>
    <referenceTo>Task_Target__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>