dynamix/force-app/main/default/objects/Opportunity/fields/Transfer_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfer Opportunity</label>
    <type>Checkbox</type>
</CustomField>