dynamix/force-app/main/default/objects/Opportunity/fields/Transfer_Opportunity_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Opportunity_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>