dynamix/force-app/main/default/objects/Opportunity/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <label>Unit Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 BHK</fullName>
            </value>
            <value>
                <fullName>2 BHK</fullName>
            </value>
            <value>
                <fullName>3 BHK</fullName>
            </value>
            <value>
                <fullName>4 BHK</fullName>
            </value>
            <value>
                <fullName>5 BHK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>