dynamix/force-app/main/default/objects/Opportunity/fields/Uploaded_Frpm_dataLoader__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_Frpm_dataLoader__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uploaded Frpm dataLoader</label>
    <type>Checkbox</type>
</CustomField>