dynamix/force-app/main/default/objects/Opportunity/fields/Vehicle_Owned__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Owned__c</fullName>
    <label>Vehicle Owned</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Vehicle</fullName>
            </value>
            <value>
                <fullName>4 wheeler</fullName>
            </value>
            <value>
                <fullName>2 wheeler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>