dynamix/force-app/main/default/objects/Opportunity/fields/Walk_In_Source1__c.field-meta.xml
<CustomField>
    <fullName>Walk_In_Source1__c</fullName>
    <formula>TEXT(Walk_in_Source__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Walk In Source</label>
    <type>Text</type>
</CustomField>