dynamix/force-app/main/default/objects/Opportunity/fields/Walk_in_Source__c.field-meta.xml
<CustomField>
    <fullName>Walk_in_Source__c</fullName>
    <label>Walk-in Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Presales</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Referred by Existing Customer</fullName>
            </value>
            <value>
                <fullName>Referred by Others</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Online Ads</fullName>
            </value>
            <value>
                <fullName>Hoarding</fullName>
            </value>
            <value>
                <fullName>Newspaper Ad</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>IVR Call</fullName>
            </value>
            <value>
                <fullName>Property Portal</fullName>
            </value>
            <value>
                <fullName>Email/SMS/WhatsApp</fullName>
            </value>
            <value>
                <fullName>Exhibition</fullName>
            </value>
            <value>
                <fullName>Existing Client</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Rechurned Lead</fullName>
            </value>
            <value>
                <fullName>Magicbricks</fullName>
            </value>
            <value>
                <fullName>99 Acres</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Passing By</fullName>
                <isActive>false</isActive>
                <label>Passing By</label>
            </value>
            <value>
                <fullName>Referral</fullName>
                <isActive>false</isActive>
                <label>Referral</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>