dynamix/force-app/main/default/objects/Opportunity/fields/When_did_you_move_in_the_city__c.field-meta.xml
<CustomField>
    <fullName>When_did_you_move_in_the_city__c</fullName>
    <label>When did you move in the city?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>