dynamix/force-app/main/default/objects/Opportunity/fields/Work_Location__c.field-meta.xml
<CustomField>
    <fullName>Work_Location__c</fullName>
    <label>Work Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under 400 sqft</fullName>
            </value>
            <value>
                <fullName>400 - 600 sqft</fullName>
            </value>
            <value>
                <fullName>601-750 sqft</fullName>
            </value>
            <value>
                <fullName>750-900 sqft</fullName>
            </value>
            <value>
                <fullName>900-1200 sqft</fullName>
            </value>
            <value>
                <fullName>Above 1200 sqft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>