dynamix/force-app/main/default/objects/Opportunity/validationRules/Budget_Picklist_Should_Be_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Budget_Picklist_Should_Be_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISBLANK( TEXT( Budget_Checkbox__c ) ), NOT(ISBLANK( TEXT(Budget__c  )) ))</errorConditionFormula>
    <errorDisplayField>Budget_Checkbox__c</errorDisplayField>
    <errorMessage>Budget Match should be mandatory while selecting Budget</errorMessage>
</ValidationRule>