dynamix/force-app/main/default/objects/Opportunity/validationRules/Cannot_Change_Project_account_prob_resn.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Project_account_prob_resn</fullName>
    <active>false</active>
    <errorConditionFormula>OR(AND( NOT(ISNEW()), OR(  ISCHANGED(Project__c ) ,  ISCHANGED( AccountId )  )  , $Profile.Name &lt;&gt; &apos;System Administrator&apos;  ),
 AND(  PRIORVALUE(Reason_for_lost__c) &lt;&gt; NULL , ISCHANGED(Reason_for_lost__c)  ,ISPICKVAL( StageName , &apos;Closed Lost&apos;),  $Profile.Name &lt;&gt; &apos;System Administrator&apos; ))</errorConditionFormula>
    <errorMessage>You do not have Sufficient Access</errorMessage>
</ValidationRule>