dynamix/force-app/main/default/objects/Opportunity/validationRules/Constructio_Picklist_Should_Be_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Constructio_Picklist_Should_Be_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISBLANK( TEXT( Construction_Status_checkbox__c) ), NOT(ISBLANK( TEXT( Construction_Status_sm__c )) ))</errorConditionFormula>
    <errorDisplayField>Construction_Status_sm__c</errorDisplayField>
    <errorMessage>Construction Status Match should be mandatory while selecting Budget.</errorMessage>
</ValidationRule>