dynamix/force-app/main/default/objects/Opportunity/validationRules/If_closed_lost_enter_reason_for_lost.validationRule-meta.xml
<ValidationRule>
    <fullName>If_closed_lost_enter_reason_for_lost</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(ISPICKVAL(StageName,&apos;Closed Lost&apos;),
 ISBLANK(TEXT(Reason_for_lost__c))))</errorConditionFormula>
    <errorDisplayField>Reason_for_lost__c</errorDisplayField>
    <errorMessage>Please enter reason for lost for opportunity closed lost.</errorMessage>
</ValidationRule>