dynamix/force-app/main/default/objects/Opportunity/validationRules/KYC_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>KYC_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    PRIORVALUE(Is_Booking_Form_Submitted_by_Customer__c)   = true,
    NOT( KYC_Completed__c )
)</errorConditionFormula>
    <errorDisplayField>KYC_Completed__c</errorDisplayField>
    <errorMessage>KYC  Completed is Mandatory</errorMessage>
</ValidationRule>