dynamix/force-app/main/default/objects/Opportunity/validationRules/Location_Picklist_Should_Be_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Location_Picklist_Should_Be_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND( NOT(ISBLANK(Location__c  )),ISBLANK( TEXT(Location_Picklist__c )) ), AND(NOT(ISBLANK( TEXT(Location_Picklist__c ))),ISBLANK(Location__c  ) ))</errorConditionFormula>
    <errorDisplayField>Location_Picklist__c</errorDisplayField>
    <errorMessage>Location Match should be mandatory while selecting Location</errorMessage>
</ValidationRule>