dynamix/force-app/main/default/objects/Opportunity/validationRules/Not_able_to_select_Budget_Picklist.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_able_to_select_Budget_Picklist</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISBLANK( TEXT( Budget__c ) ),  NOT(ISBLANK( TEXT(  Budget_Checkbox__c  )) ))</errorConditionFormula>
    <errorDisplayField>Budget_Checkbox__c</errorDisplayField>
    <errorMessage>Budget should be mandatory if you select Budget Picklist.</errorMessage>
</ValidationRule>