dynamix/force-app/main/default/objects/Opportunity/validationRules/Not_able_to_select_Location_Picklist.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_able_to_select_Location_Picklist</fullName>
    <active>false</active>
    <errorConditionFormula>AND ( OR(NOT( ISNULL( Location__c )), NOT(ISBLANK(Location__c)) )  , ISBLANK( TEXT(Location_Picklist__c)) )</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>Location should be mandatory if you selected the Location value Yes or No.</errorMessage>
</ValidationRule>