dynamix/force-app/main/default/objects/Opportunity/validationRules/StampBy_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>StampBy_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
      PRIORVALUE(Is_Booking_Form_Submitted_by_Customer__c)  = true,
    ISBLANK(TEXT( Stamp_Duty_Payable_By__c ))
)</errorConditionFormula>
    <errorDisplayField>Stamp_Duty_Payable_By__c</errorDisplayField>
    <errorMessage>Stamp Duty Payable By is Mandatory</errorMessage>
</ValidationRule>