dynamix/force-app/main/default/objects/Opportunity/validationRules/Validation_on_Booking_FRom.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_on_Booking_FRom</fullName>
    <active>true</active>
    <errorConditionFormula>AND

( Is_Booking_Form_Submitted_by_Customer__c  = false,

 KYC_Completed__c  = true)</errorConditionFormula>
    <errorMessage>Booking from is not submitted by customer</errorMessage>
</ValidationRule>