dynamix/force-app/main/default/objects/Opportunity/validationRules/While_creating_opportunity_account_looku.validationRule-meta.xml
<ValidationRule>
    <fullName>While_creating_opportunity_account_looku</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(AccountId)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Please enter account name for Opportunity.</errorMessage>
</ValidationRule>